--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
     <link rel="icon" href="./images/logo.png">
     <link rel="icon" href="./images/logo.png" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="./images/logo.png">
     <link rel="manifest" href="/my.webmanifest">
     <meta name="theme-color" content="#FF00FF">
     <link rel="stylesheet" href="./css/styles.css">
@@ -33,7 +33,7 @@
         font-family: "Ninja Naruto", sans-serif;
       }
       header {
-        background: url('./images/main.jpeg');
+        background: url('./images/logo.png');
         aspect-ratio: 1;
         width: 100%;
         background-size: cover;
@@ -49,35 +49,43 @@
   </head>
   <body class="h-screen w-full grid place-items-center relative bg-black text-white">
     <main class="px-6 py-16 max-w-5xl mx-auto">
-      <header>
-        <nav class="w-full bg-black p-5 rounded-md flex justify-between">
+      <header class="p-5 rounded-lg">
+        <nav class="w-full bg-black p-5 rounded-md flex justify-center">
           <a href="./index.html" class="flex gap-3 items-center">
             <img src="./images/logo.png" alt="Naruto Logo" class="w-12 bg-amber-200 rounded-full mx-auto">
-            <span class="font-medium naruto">Naruto CTO</span>
+            <span class="font-medium naruto text-xl">Naruto CTO</span>
           </a>
         </nav>
       </header>
-      <div class="py-8 relative flex items-center justify-center text-amber-900">
+
+      <div class="flex gap-8 items-center my-6 justify-center">
+        <a href="https://twitter.com/NarutoCto/" target="_blank" class="shadow-lg flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
+          <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" fill="#FFFFFF"><path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg>
+          Twitter</a>
+        <a href="https://t.me/Narutocto" target="_blank" class="shadow-lg flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
+          <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#FFFFFF"><path d="M39.175,10.016c1.687,0,2.131,1.276,1.632,4.272c-0.571,3.426-2.216,14.769-3.528,21.83 c-0.502,2.702-1.407,3.867-2.724,3.867c-0.724,0-1.572-0.352-2.546-0.995c-1.32-0.872-7.984-5.279-9.431-6.314 c-1.32-0.943-3.141-2.078-0.857-4.312c0.813-0.796,6.14-5.883,10.29-9.842c0.443-0.423,0.072-1.068-0.42-1.068 c-0.112,0-0.231,0.034-0.347,0.111c-5.594,3.71-13.351,8.859-14.338,9.53c-0.987,0.67-1.949,1.1-3.231,1.1 c-0.655,0-1.394-0.112-2.263-0.362c-1.943-0.558-3.84-1.223-4.579-1.477c-2.845-0.976-2.17-2.241,0.593-3.457 c11.078-4.873,25.413-10.815,27.392-11.637C36.746,10.461,38.178,10.016,39.175,10.016 M39.175,7.016L39.175,7.016 c-1.368,0-3.015,0.441-5.506,1.474L33.37,8.614C22.735,13.03,13.092,17.128,6.218,20.152c-1.074,0.473-4.341,1.91-4.214,4.916 c0.054,1.297,0.768,3.065,3.856,4.124l0.228,0.078c0.862,0.297,2.657,0.916,4.497,1.445c1.12,0.322,2.132,0.478,3.091,0.478 c1.664,0,2.953-0.475,3.961-1.028c-0.005,0.168-0.001,0.337,0.012,0.507c0.182,2.312,1.97,3.58,3.038,4.338l0.149,0.106 c1.577,1.128,8.714,5.843,9.522,6.376c1.521,1.004,2.894,1.491,4.199,1.491c2.052,0,4.703-1.096,5.673-6.318 c0.921-4.953,1.985-11.872,2.762-16.924c0.331-2.156,0.603-3.924,0.776-4.961c0.349-2.094,0.509-4.466-0.948-6.185 C42.208,7.875,41.08,7.016,39.175,7.016L39.175,7.016z"/></svg>
+          Telegram</a>
+      </div>
+
+      <section class="my-16 relative flex items-center justify-center text-white lg:text-amber-950">
         <img src="./images/scroll.webp" class="w-full" alt="">
-        <div class="absolute w-3/5">
-          <h1 class="capitalize text-4xl xl:text-6xl font-bold">
+        <div class="absolute w-4/5 lg:w-3/5">
+          <h1 class="capitalize text-4xl xl:text-6xl font-bold hidden lg:block">
             NARUTO CTO
           </h1>
-          <p class="text-base lg:text-md mt-2">$Naruto is a Japanese anime television series based on massahi kishimoto. Naruto Uzumaki a young ninja who seek recognition from his peers and dreams of becoming the hokage the leader of his village. <br>
+          <p class="text-sm lg:text-2xl mt-2 font-bold">$Naruto is a Japanese anime television series based on massahi kishimoto. Naruto Uzumaki a young ninja who seek recognition from his peers and dreams of becoming the hokage the leader of his village. <br>
             Naruto represents an unprecedented fusion in the realm of anime-inspired themes, creating the ultimate anime that stands unmatched in power and charisma. <br> Naruto is not just the next 1000x gem on Solana chain but it is a revolution in making,buy Naruto and hold for the bullrun.
             <br>
             Step into a world where innovation meets tradition, and community meets cutting-edge technology. Naruto is more than a character or a token—it's a movement. Be part of something bigger, where every holder isn’t just a participant, but a pioneer in a new digital landscape. Welcome to the future, welcome to Naruto.
           </p>
-          <div class="flex gap-8 items-center mt-6">
-            <a href="https://twitter.com/NarutoCto/" target="_blank" class="flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-secondary py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
-              <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" fill="#FFFFFF"><path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg>
-              Follow on Twitter</a>
-            <a href="https://t.me/Narutocto" target="_blank" class="flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-secondary py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
-              <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#FFFFFF"><path d="M39.175,10.016c1.687,0,2.131,1.276,1.632,4.272c-0.571,3.426-2.216,14.769-3.528,21.83 c-0.502,2.702-1.407,3.867-2.724,3.867c-0.724,0-1.572-0.352-2.546-0.995c-1.32-0.872-7.984-5.279-9.431-6.314 c-1.32-0.943-3.141-2.078-0.857-4.312c0.813-0.796,6.14-5.883,10.29-9.842c0.443-0.423,0.072-1.068-0.42-1.068 c-0.112,0-0.231,0.034-0.347,0.111c-5.594,3.71-13.351,8.859-14.338,9.53c-0.987,0.67-1.949,1.1-3.231,1.1 c-0.655,0-1.394-0.112-2.263-0.362c-1.943-0.558-3.84-1.223-4.579-1.477c-2.845-0.976-2.17-2.241,0.593-3.457 c11.078-4.873,25.413-10.815,27.392-11.637C36.746,10.461,38.178,10.016,39.175,10.016 M39.175,7.016L39.175,7.016 c-1.368,0-3.015,0.441-5.506,1.474L33.37,8.614C22.735,13.03,13.092,17.128,6.218,20.152c-1.074,0.473-4.341,1.91-4.214,4.916 c0.054,1.297,0.768,3.065,3.856,4.124l0.228,0.078c0.862,0.297,2.657,0.916,4.497,1.445c1.12,0.322,2.132,0.478,3.091,0.478 c1.664,0,2.953-0.475,3.961-1.028c-0.005,0.168-0.001,0.337,0.012,0.507c0.182,2.312,1.97,3.58,3.038,4.338l0.149,0.106 c1.577,1.128,8.714,5.843,9.522,6.376c1.521,1.004,2.894,1.491,4.199,1.491c2.052,0,4.703-1.096,5.673-6.318 c0.921-4.953,1.985-11.872,2.762-16.924c0.331-2.156,0.603-3.924,0.776-4.961c0.349-2.094,0.509-4.466-0.948-6.185 C42.208,7.875,41.08,7.016,39.175,7.016L39.175,7.016z"/></svg>
-              Join Telegram</a>
-          </div>
         </div>
-      </div>
+      </section>
+
+      <section class="my-16 grid lg:grid-cols-3 gap-8">
+        <img src="./images/01.jpeg" class="w-full aspect-square object-cover" alt="">
+        <img src="./images/03.jpeg" class="w-full aspect-square object-cover" alt="">
+        <img src="./images/main.jpeg" class="w-full aspect-square object-cover" alt="">
+      </section>
       <section class="py-16">
         <h2 class="text-3xl lg:text-4xl font-bold mx-auto text-center">Roadmap</h2>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-6">
@@ -110,24 +118,21 @@
         </div>
 
       </section>
-      <footer class="flex flex-col lg:flex-row justify-between items-center gap-8 py-16">
-        <div>
+      <footer class="flex flex-col lg:flex-row justify-between items-center gap-8 pt-16">
           <div class="p-5 rounded-lg border border-amber-500">
             <h3 class="text-lg lg:text-xl font-bold mx-auto">Disclaimer</h3>
             <p class="text-base lg:text-md">
-              The information published on this Website $Naruto  cannot guarantee that the investors in $Naruto  is a Financial advise, you should take full responsibility of any loss you ecounter trading Naruto  
+              The information published on this Website $Naruto cannot guarantee that the investors in $Naruto  is a Financial advise, you should take full responsibility of any loss you ecounter trading Naruto  
             </p>
           </div>
-          <div class="flex gap-8 items-center mt-6">
-            <a href="https://twitter.com/NarutoCto/" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-secondary p-5 justify-center rounded-lg outline-none">
+          <div class="flex-row lg:flex-col flex gap-8 items-center mt-6 lg:mt-0">
+            <a href="https://twitter.com/NarutoCto/" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 p-2 justify-center rounded-lg outline-none">
               <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" fill="#FFFFFF"><path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg>
             </a>
-            <a href="https://t.me/Narutocto" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-secondary p-5 justify-center rounded-lg outline-none">
+            <a href="https://t.me/Narutocto" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 p-2 justify-center rounded-lg outline-none">
               <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#FFFFFF"><path d="M39.175,10.016c1.687,0,2.131,1.276,1.632,4.272c-0.571,3.426-2.216,14.769-3.528,21.83 c-0.502,2.702-1.407,3.867-2.724,3.867c-0.724,0-1.572-0.352-2.546-0.995c-1.32-0.872-7.984-5.279-9.431-6.314 c-1.32-0.943-3.141-2.078-0.857-4.312c0.813-0.796,6.14-5.883,10.29-9.842c0.443-0.423,0.072-1.068-0.42-1.068 c-0.112,0-0.231,0.034-0.347,0.111c-5.594,3.71-13.351,8.859-14.338,9.53c-0.987,0.67-1.949,1.1-3.231,1.1 c-0.655,0-1.394-0.112-2.263-0.362c-1.943-0.558-3.84-1.223-4.579-1.477c-2.845-0.976-2.17-2.241,0.593-3.457 c11.078-4.873,25.413-10.815,27.392-11.637C36.746,10.461,38.178,10.016,39.175,10.016 M39.175,7.016L39.175,7.016 c-1.368,0-3.015,0.441-5.506,1.474L33.37,8.614C22.735,13.03,13.092,17.128,6.218,20.152c-1.074,0.473-4.341,1.91-4.214,4.916 c0.054,1.297,0.768,3.065,3.856,4.124l0.228,0.078c0.862,0.297,2.657,0.916,4.497,1.445c1.12,0.322,2.132,0.478,3.091,0.478 c1.664,0,2.953-0.475,3.961-1.028c-0.005,0.168-0.001,0.337,0.012,0.507c0.182,2.312,1.97,3.58,3.038,4.338l0.149,0.106 c1.577,1.128,8.714,5.843,9.522,6.376c1.521,1.004,2.894,1.491,4.199,1.491c2.052,0,4.703-1.096,5.673-6.318 c0.921-4.953,1.985-11.872,2.762-16.924c0.331-2.156,0.603-3.924,0.776-4.961c0.349-2.094,0.509-4.466-0.948-6.185 C42.208,7.875,41.08,7.016,39.175,7.016L39.175,7.016z"/></svg>
             </a>
           </div>        
-        </div>
-        <img src="./images/extra.jpeg" class="lg:w-1/2 w-full" alt="Naruto doing curls">
       </footer>
     </main>
   </body>
