--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Naruto </title>
+    <title>Naruto CTO</title>
   
     <meta name="description" content="Naruto  home page">
     <meta property="og:title" content="Naruto  home page">
     <meta property="og:description" content="Page description">
     <meta property="og:image" content="./images/logo.jpeg">
-    <meta property="og:image:alt" content="Naruto  Logo">
+    <meta property="og:image:alt" content="Naruto CTO Logo">
     <meta property="og:locale" content="en_GB">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
@@ -59,7 +59,7 @@
       </header>
 
       <div class="flex gap-8 items-center my-6 justify-center">
-        <a href="https://twitter.com/NarutoCto/" target="_blank" class="shadow-lg flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
+        <a href="https://twitter.com/NarutoCto1/" target="_blank" class="shadow-lg flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
           <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" fill="#FFFFFF"><path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg>
           Twitter</a>
         <a href="https://t.me/Narutocto" target="_blank" class="shadow-lg flex items-center gap-3 bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 py-2 px-5 text-white font-medium text-base 2xl:text-lg justify-center rounded-lg outline-none">
@@ -122,11 +122,11 @@
           <div class="p-5 rounded-lg border border-amber-500">
             <h3 class="text-lg lg:text-xl font-bold mx-auto">Disclaimer</h3>
             <p class="text-base lg:text-md">
-              The information published on this Website $Naruto cannot guarantee that the investors in $Naruto  is a Financial advise, you should take full responsibility of any loss you ecounter trading Naruto  
+              The information published on this Website $Naruto cannot guarantee that investing in $Naruto  is a Financial advise, you should take full responsibility of any loss you ecounter trading Naruto  
             </p>
           </div>
           <div class="flex-row lg:flex-col flex gap-8 items-center mt-6 lg:mt-0">
-            <a href="https://twitter.com/NarutoCto/" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 p-2 justify-center rounded-lg outline-none">
+            <a href="https://twitter.com/NarutoCto1/" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 p-2 justify-center rounded-lg outline-none">
               <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" fill="#FFFFFF"><path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg>
             </a>
             <a href="https://t.me/Narutocto" target="_blank" class="bg-amber-500 duration-500 ease-in-out hover:bg-orange-500 p-2 justify-center rounded-lg outline-none">
